--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sass": "^1.34.1",
     "vue": "^3.0.5",
     "vue-apexcharts": "^1.6.1",
+    "vue-axios": "^3.2.4",
     "vue-router": "4",
     "vue3-apexcharts": "^1.4.0"
   },
